# llm-gles-finetuning

./: README.md  pyproject.toml
evaluation/: rq1_gles2017_vote_cls.py  rq1_gles2017_vote_cls_no_party_id.py  rq2_gles2017_vote_cls_party_id_exclusion.py  rq2_gles2017_vote_cls_uni_and_school.py  rq2_gles2017_vote_cls_uni_and_school_no_id.py
evaluation/helpers/: data_preprocessing.py  eval_pipeline.py
src/llm_survey_prediction/: model_wrappers.py  prompt.py
