[project]
name = "llm-survey-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.45.0",
    "catboost>=1.2.7",
    "evaluate>=0.4.3",
    "openai>=1.55.3",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pyreadstat>=1.2.8",
    "scikit-learn>=1.5.2",
    "shap>=0.46.0",
    "tiktoken>=0.8.0",
    "transformers>=4.47.0",
    "trl>=0.12.1",
    "unsloth>=2024.12.4",
    "wandb>=0.18.7",
    "xgboost>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "seaborn>=0.13.2",
]
